--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <h1 id="header-title">Item Lister</h1>
             </div>
             <div class="col-md-6 align-self-center">
+              
                 <input type="text" class="form-control" id="filter" placeholder="Search Items...">
             </div>
           </div>
@@ -27,13 +28,15 @@
         </form>
         <h2 class="title">Items</h2>
         <ul id="items" class="list-group">
-          <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+          <li class="list-group-item">Item 1 <button>class="btn btn-danger btn-sm float-right delete">X</button></li>
           <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
           <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
           <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
         </ul>
        </div>
       </div>
+
+
 
 </body>
 </html>
