recap on curriculum

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./index.js">
+    <script src="./DOM.js"></script>
 </head>
 
 <body class="body1">
 
   <div >
     <button id="float" class=" btn-main">
-      <p>Here i am!</p>
+      <p id="float">Here i am!</p>
       <div>&times;</div>
 
     </button>
